[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon_outline.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://footstep_snow_000.ogg" type="AudioStream" id=3]
[ext_resource path="res://impactMining_001.ogg" type="AudioStream" id=4]
[ext_resource path="res://splat33-sheet.png" type="Texture" id=5]
[ext_resource path="res://Spalt.wav" type="AudioStream" id=6]
[ext_resource path="res://smoke_04.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 19.105

[sub_resource type="CircleShape2D" id=2]
radius = 20.0

[sub_resource type="CanvasItemMaterial" id=4]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = -250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 180.0
angle_random = 1.0
scale = 0.25
color = Color( 0.713726, 0, 0, 1 )
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=8]
max_value = 100.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 1, -0.4, 0 )
spread = 8.0
gravity = Vector3( 0, 550, 0 )
initial_velocity = 1000.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 800.0
damping_curve = SubResource( 7 )
scale = 0.25
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 10, 10, 10, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 0.497727 ), 0.0, -0.357576, 0, 0, Vector2( 1, 1 ), -0.139921, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 16, 1, 1 )
flag_disable_z = true
direction = Vector3( -1, 1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.1
scale_curve = SubResource( 13 )
color = Color( 3, 3, 3, 1 )
color_ramp = SubResource( 10 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 3
script = ExtResource( 2 )
gravity = 800.0
jump_strength = 600.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -27.966
pitch_scale = 0.68

[node name="ImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.42

[node name="SplatSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -28.84

[node name="BloodParticles" type="Particles2D" parent="."]
material = SubResource( 4 )
emitting = false
amount = 40
lifetime = 8.0
explosiveness = 0.78
visibility_rect = Rect2( -200, -200, 800, 500 )
local_coords = false
process_material = SubResource( 3 )
texture = ExtResource( 5 )

[node name="BloodExplosionParticles" type="Particles2D" parent="."]
pause_mode = 2
modulate = Color( 0.788235, 0, 0, 1 )
material = SubResource( 5 )
emitting = false
amount = 50
lifetime = 1e+06
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
visibility_rect = Rect2( -500, -500, 500, 500 )
process_material = SubResource( 6 )
texture = ExtResource( 5 )

[node name="JumpParticles" type="Particles2D" parent="."]
position = Vector2( -1, 16 )
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
speed_scale = 4.56
explosiveness = 1.0
local_coords = false
process_material = SubResource( 11 )
texture = ExtResource( 7 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
